# ZyGinator

./: .gitignore  README.md  pyproject.toml  setup.py
ZyGinator/: __init__.py  paginator.py
